<resources>
    <string name="RecyclerView">RecyclerView</string>
    <string name="btnIsuses1">btnIssuses1</string>
    <string name="btnIsuses2">btnIssuses2</string>
    <string name="btnIsuses3">btnIssuses3</string>
    <string name="app_name">intern-17k3</string>
    <string name="tvSloganLogin">a bike for everyone, always</string>
    <string name="tvWelcome">Welcome to urbi</string>
    <string name="btnLoginFb">login with facebook</string>
    <string name="btnLoginPhone">login with phone number</string>
    <string name="tvTitleSignup">Enter your details belows to get stared</string>
    <string name="tv_term_cofilm">I have read and agree with the</string>
    <string name="tv_term_link">terms and conditions</string>
    <string name="HeadNumPhoneVN">+84</string>
    <string name="HeadNumPhoneAus">+64</string>
    <string name="tvOrFrLogin">or</string>
    <string name="tvDotSignupFragment">.</string>
    <string name="tvSignup">New to urbi? Sign up for an account</string>
    <string name="SelectEx">Select Example</string>
    <string name="SelectExLogin">Login Screen</string>
    <string name="SelectExCaculator">Caculator</string>
    <string name="hint_edt_number_a">Number A</string>
    <string name="hint_edt_number_b">Number B</string>
    <string name="tv_result">Results</string>
    <string name="edt_sum">+</string>
    <string name="edt_sub">-</string>
    <string name="edt_multi">*</string>
    <string name="edt_divi">/</string>
    <string name="dialog_title">Warning</string>
    <string name="dialog_message">Please input number!</string>
    <string name="dialog_message_num_0">Please not divided by 0</string>
    <string name="number_0">0</string>
    <string name="hintedtPhoneNumber">Enter mobile number</string>
    <string name="hintFullName">Full name</string>
    <string name="hintEmail">Email</string>
    <string name="text_btn_login_screen">Login Screen</string>
    <string name="text_btn_calculator_screen">Calculation Screen</string>
    <string name="text_btn_recycler_view">Recycler View Screen</string>
    <string name="text_btn_drawer_layout">Drawer Layout Screen</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_btn_recycler_screen">RecyclerView Screen</string>
    <string name="text_btn_save_data_screen">Save Data Screen</string>
    <string name="text_btn_ex1">Exercise1</string>
    <string name="text_btn_ex2">Exercise2</string>
    <string name="text_btn_ex3">Exercise3</string>
    <string name="text_btn_save_value">Save</string>
    <string name="title_company">Company Information</string>
    <string name="company_name">Name : </string>
    <string name="company_slogan">Slogan : </string>
    <string name="not_installed_google_photos">You not installed Google Photos</string>
    <string name="not_img_picked">You haven\'t picked Image</string>
    <string name="text_btn_view_pager_screen">View Pager Screen</string>
    <string name="tv_name_skip">SKIP</string>
    <string name="tv_step_1">STEP 1</string>
    <string name="tv_step_2">STEP 2</string>
    <string name="tv_step_3">STEP 3</string>
    <string name="dialog_skip_title">NOTICE</string>
    <string name="dialog_skip_message">Do you want skip this?</string>
    <string name="dialog_skip_yes">Yes</string>
    <string name="dialog_skip_no">No</string>
    <string name="tv_info_fragment_title">INFOMATION</string>
    <string name="btn_name_update">Update</string>
    <string name="tv_name_info">Your Name</string>
    <string name="tv_team_info">Your Team</string>
    <string name="tv_location_info">Your Address</string>
    <string name="tv_update_info_title">UPDATE INFO</string>
    <string name="edt_name_info_hint">Input your name</string>
    <string name="edt_team_info_hint">Input your team</string>
    <string name="edt_location_info_hint">input your address</string>
    <string name="btn_name_confirm_update">OK</string>
    <string name="btn_name_cancel_update">Cancel</string>
    <string name="edt_null">please input values</string>
    <string name="text_btn_image_screen">Image Screen</string>
    <string name="name_btn_load_image">Load Image</string>
    <string name="name_btn_load_from_drawable">From Drawable</string>
    <string name="name_btn_load_from_asset">From Asset</string>
    <string name="name_btn_load_from_storage">From Storage</string>
    <string name="name_btn_load_from_internet">From Internet</string>
    <string name="name_btn_nine_path">Nine Path</string>
    <string name="name_btn_draw_vector">Draw Vector</string>
    <string name="name_btn_thread">Thread And Handler</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_btn_start_download">Download</string>
    <string name="name_btn_exercise_1_thread">Exercise 1</string>
    <string name="name_btn_exercise_2_thread">Exercise 2</string>
    <string name="item_countdown_list">item :  </string>
    <string name="text_btn_canvas_screen">CanVas Screen</string>
    <string name="tv_canvas_name">Chart</string>
    <string name="tv_canvas_km">Km</string>
    <string name="tv_day">24 Jul</string>
    <string name="tv_day_end">9 Oct</string>
    <string name="name_btn_unit_text">Unit Test Login</string>
    <string name="unit_test_login_user">user name</string>
    <string name="unit_test_login_password">password</string>
    <string name="unit_test_btn_login">login</string>
    <string name="null_user_name">Please input user name</string>
    <string name="validate_username_length">Length of userName is higher than 5 and lower than 25</string>
    <string name="validate_username_capture_number">user name have least one capital letter and most 2 number</string>
    <string name="validate_username_space">user name have space</string>
    <string name="validate_username_special_char">username have special character</string>
    <string name="validate_username_no_distinction">distinction between uppercase and lowercase letters</string>
    <string name="validate_done">Done</string>
    <string name="null_password">please input password</string>
    <string name="validate_password_length">password must > 7 character</string>
    <string name="validate_password_different_user_name">password is not different username</string>
    <string name="validate_password_have_least_number">password have at least one special character or number</string>
    <string name="validate_password_space">password have space</string>
    <string name="validate_password_least_3_capital_letter">password have least 3 capital letter</string>
    <string name="validate_password_repeat">repeat character password 2 times</string>
    <string name="name_btn_data_binding">Data binding</string>
    <string name="name_btn_update_profile">update</string>
    <string name="tv_edit_info">Edit Profile</string>
    <string name="edt_email_edit_info">Email</string>
    <string name="tv_birth_day">Birth Day</string>
    <string name="tv_gender">Gender</string>
    <string name="edt_phone_edit_info">Contact Number</string>
    <string name="tv_preview_info">Preview Info</string>
    <string name="name_btn_back_to_edit_profile">edit profile</string>
    <string name="edittext_birthday" formatted="false">%d/%d/%d</string>
    <string name="tv_gender_male">Male</string>
    <string name="tv_gender_female">Female</string>
    <string name="name_btn_edit_profile">Edit</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="name_btn_battery_info">Battery info</string>
    <string name="battery_status_ac">AC</string>
    <string name="battery_status_usb">USB</string>
    <string name="battery_status_unknown">UNKNOWN</string>
    <string name="battery_heath_dead">DEAD</string>
    <string name="battery_heath_good">GOOD</string>
    <string name="battery_heath_over">OVER VOLTAGE</string>
    <string name="battery_heath_heat">OVER HEART</string>
    <string name="battery_heath_failure">FAILURE</string>
    <string name="battery_status_charging">CHARGING</string>
    <string name="battery_status_dis_charging">DISCHARGING</string>
    <string name="battery_status_full">FULL</string>
    <string name="battery_status_not_charging">NOT CHARGING</string>
</resources>
