<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.image.LoadImageActivity">

    <Button
        android:id="@+id/btnLoadFromDrawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_load_from_drawable" />

    <Button
        android:id="@+id/btnLoadFromAsset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_load_from_asset" />

    <Button
        android:id="@+id/btnLoadFromStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_load_from_storage" />

    <Button
        android:id="@+id/btnLoadFromInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_load_from_internet" />

    <ImageView
        android:id="@+id/imgLoad"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

</LinearLayout>
