<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.viewpagerandtablelayout.ui.InfoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/tv_info_fragment_title"
        android:textColor="@color/colorLink"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tv_name_info"
        android:textColor="@color/colorBlack"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tvTeamInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tv_team_info"
        android:textColor="@color/colorBlack"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tvLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tv_location_info"
        android:textColor="@color/colorBlack"
        android:textSize="17dp" />

    <Button
        android:id="@+id/btnUpdateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorLink"
        android:text="@string/btn_name_update" />


</LinearLayout>
