<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="vn.asiantech.internship.image.ImageManagementExerciseActivity">

    <Button
        android:id="@+id/btnLoadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_load_image" />

    <Button
        android:id="@+id/btnNinePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_nine_path" />
    <Button
        android:id="@+id/btnDrawVector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_btn_draw_vector" />
</LinearLayout>
