<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/ic_bg_header_info"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_preview_info"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_user_header" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="text"
                android:textSize="15sp"
                tools:ignore="Deprecated" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edt_email_edit_info"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_edt_number"
                    android:editable="false"
                    android:inputType="textEmailAddress"
                    tools:ignore="Deprecated" />

                <Button
                    android:id="@+id/btnHintEmailInfo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:background="?android:attr/selectableItemBackground" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_birth_day"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_edt_number"
                        android:editable="false"
                        android:inputType="date"
                        tools:ignore="Deprecated" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_gender"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_edt_number"
                        android:editable="false"
                        tools:ignore="Deprecated" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edt_phone_edit_info"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtContactNumber"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/bg_edt_number"
                android:drawableRight="@drawable/ic_clear_black_18dp"
                android:editable="false"
                android:gravity="center"
                android:inputType="number"
                tools:ignore="Deprecated" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:onClick="editProfile"
        android:text="@string/name_btn_back_to_edit_profile" />
</RelativeLayout>
